syntax = "proto3";

package demopb;

option go_package = ".;demopb";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "mockpb/mockoptions.proto";

// Api is the main service
service Api {

  // ListPersons lists the persons present in the database.
  rpc ListPersons(ListPersonsRequest) returns (ListPersonsResponse) {
    option (google.api.http) = {
      get: "/api/v1/persons"
    };
  }

  // GetPerson retrives one person from the database.
  rpc GetPerson(GetPersonRequest) returns (Person) {
    option (google.api.http) = {
      get: "/api/v1/persons/{person_id}"
    };
  }

  // CreatePerson creates a new person and stores it in the database.
  rpc CreatePerson(CreatePersonRequest) returns (Person) {
    option (google.api.http) = {
      post: "/api/v1/persons"
      body: "*"
    };
  }

  // DeletePerson remove a person from the database
  rpc DeletePerson(DeletePersonRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/persons/{person_id}"
    };
  }

}

// Person represents a person
message Person {
  enum Type {
    individual = 0;
    company = 1;
  }
  string id    = 1 [(mockpb.type) = uuid];
  string name  = 2;
  string email = 3;
  Type type = 4;
  map<string, string> attributes = 5;
  string hardware = 6 [(mockpb.type) = mac_address];
}

// ListPersonRequests is the request to list the content of the database
message ListPersonsRequest {
  google.protobuf.StringValue project_id = 1 [(mockpb.type) = uuid];

  // page is an optional field to get a particular page in listings
  google.protobuf.Int32Value page      = 10;
  // page_size is an optional field to set the page size in listings
  google.protobuf.Int32Value page_size = 11;
}

// ListPersonsReponse is the result sent back from the listing
message ListPersonsResponse {
  repeated Person persons = 1;

  uint32 total_count = 10;
}

message GetPersonRequest { 
  string person_id = 1;
}

message CreatePersonRequest {
  google.protobuf.StringValue project_id = 1;
  Person person = 2;
}

message DeletePersonRequest { 
  string person_id = 1;
}